fix sidebar overlapping

--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -89,6 +89,10 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
+
+body {
+  overflow-x: hidden;
+}
  
 /* @layer base {
   * {
